@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.71 2005-08-25 01:44:21 achu Exp $
+## $Id: Makefile.am,v 1.72 2005-08-25 22:04:32 achu Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -20,21 +20,47 @@ noinst_HEADERS = cerebrod.h \
 # cerebrod daemon
 #
 
+if !WITH_STATIC_MODULES
+LTDL_LIBS = ../libs/common/libltdl.la
+endif
+
+# Wierd linker issues here, ordering matters
 if WITH_CEREBROD_SPEAKER_ONLY
-CEREBROD_LDADDS = ../libs/util/libutil_config.la \
-		  ../libs/util/libutil_metric.la \
-		  ../libs/wrappers/libwrappers.la \
-		  ../libs/wrappers/libwrappers_list.la \
-		  ../libs/wrappers/libwrappers_marshall.la
-else
-CEREBROD_LDADDS = ../libs/common/libfd.la \
+CEREBROD_LDADDS = ../libs/cerebro_error/libcerebro_error.la \
+		  ../libs/debug/libdebug.la \
+		  ../libs/modules/libmetricmodules.la \
+		  ../libs/modules/libmodules.la \
 		  ../libs/util/libutil_config.la \
+		  ../libs/modules/libconfigmodules.la \
 		  ../libs/util/libutil_metric.la \
 		  ../libs/util/libutil_network.la \
 		  ../libs/wrappers/libwrappers.la \
+		  ../libs/wrappers/libwrappers_list.la \
+		  ../libs/wrappers/libwrappers_marshall.la \
+		  ../libs/common/libconffile.la \
+		  ../libs/common/libfd.la \
+		  ../libs/common/liblist.la \
+		  ../libs/common/libmarshall.la
+else
+CEREBROD_LDADDS = ../libs/cerebro_error/libcerebro_error.la \
+		  ../libs/debug/libdebug.la \
+		  ../libs/util/libutil_config.la \
+		  ../libs/util/libutil_metric.la \
+		  ../libs/util/libutil_network.la \
+		  ../libs/modules/libclusterlistmodules.la \
+		  ../libs/modules/libconfigmodules.la \
+		  ../libs/modules/libmetricmodules.la \
+		  ../libs/modules/libmonitormodules.la \
+		  ../libs/modules/libmodules.la \
+		  ../libs/wrappers/libwrappers.la \
 		  ../libs/wrappers/libwrappers_hash.la \
 		  ../libs/wrappers/libwrappers_list.la \
-		  ../libs/wrappers/libwrappers_marshall.la
+		  ../libs/wrappers/libwrappers_marshall.la \
+		  ../libs/common/libconffile.la \
+		  ../libs/common/libfd.la \
+		  ../libs/common/libhash.la \
+		  ../libs/common/liblist.la \
+		  ../libs/common/libmarshall.la
 endif
 
 if !WITH_CEREBROD_NO_THREADS
@@ -43,7 +69,7 @@ if !WITH_CEREBROD_NO_THREADS
 # due to some linker ordering issue.
 AM_CFLAGS = $(PTHREAD_CFLAGS)
 AM_LDFLAGS = $(PTHREAD_LIBS)
-WRAPPERS_PTHREAD_LIB = ../libs/wrappers/libwrappers_pthread.la
+PTHREAD_WRAPPERS = ../libs/wrappers/libwrappers_pthread.la
 endif
 
 sbin_PROGRAMS    = cerebrod
@@ -65,9 +91,46 @@ cerebrod_CFLAGS  = -I$(srcdir)/../libs/common \
 		   -I$(srcdir)/../libs/util \
 		   -I$(srcdir)/../libs/wrappers
 cerebrod_LDADD   = $(CEREBROD_LDADDS) \
-		   $(WRAPPERS_PTHREAD_LIB)
+		   $(LTDL_LIBS) \
+		   $(PTHREAD_WRAPPERS)
+
+../libs/cerebro_error/libcerebro_error.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../libs/common/libconffile.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
 
 ../libs/common/libfd.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../libs/common/libhash.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../libs/common/liblist.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../libs/common/libltdl.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../libs/common/libmarshall.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../libs/debug/libdebug.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../libs/modules/libclusterlistmodules.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../libs/modules/libconfigmodules.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../libs/modules/libmetricmodules.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../libs/modules/libmonitormodules.la : force-dependency-check
+	@cd `dirname $@` && make `basename $@`
+
+../libs/modules/libmodules.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
 
 ../libs/util/libutil_config.la : force-dependency-check
