@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.1 2005-06-25 00:14:28 achu Exp $
+## $Id: Makefile.am,v 1.2 2005-08-25 22:04:32 achu Exp $
 ##*****************************************************************************
 
 noinst_HEADERS	    = debug.h
@@ -7,9 +7,5 @@ noinst_HEADERS	    = debug.h
 noinst_LTLIBRARIES  = libdebug.la
 libdebug_la_CFLAGS  = -I$(srcdir)/../include
 libdebug_la_SOURCES = debug.c
-libdebug_la_LIBADD  = ../cerebro_error/libcerebro_error.la
-
-../cerebro_error/libcerebro_error.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
 
 force-dependency-check:
