@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.7 2005-08-25 18:25:12 achu Exp $
+## $Id: Makefile.am,v 1.8 2005-08-25 22:04:32 achu Exp $
 ##*****************************************************************************
 
 noinst_HEADERS	       = clusterlist_module.h \
@@ -24,44 +24,51 @@ if WITH_MONITOR_STATIC_MODULES
 MONITOR_STATIC_LIB = ../../modules/monitor/libstaticmonitormodules.la
 endif
 
-if WITH_STATIC_MODULES
-STATIC_MODULE_LIBS = $(CLUSTERLIST_STATIC_LIB) \
-		     $(CONFIG_STATIC_LIB) \
-		     $(METRIC_STATIC_LIB) \
-		     $(MONITOR_STATIC_LIB)
-else
-LTDL_LIBS = ../common/libltdl.la
-endif
-
 clusterlist_module_builddir=`cd $(top_builddir)/src/modules/clusterlist && pwd`
 config_module_builddir=`cd $(top_builddir)/src/modules/config && pwd`
 metric_module_builddir=`cd $(top_builddir)/src/modules/metric && pwd`
 monitor_module_builddir=`cd $(top_builddir)/src/modules/monitor && pwd`
 
-noinst_LTLIBRARIES    = libmodules.la
-libmodules_la_CFLAGS  = -DCLUSTERLIST_MODULE_BUILDDIR=\"$(clusterlist_module_builddir)\" \
-			-DCONFIG_MODULE_BUILDDIR=\"$(config_module_builddir)\" \
-			-DMETRIC_MODULE_BUILDDIR=\"$(metric_module_builddir)\" \
-			-DMONITOR_MODULE_BUILDDIR=\"$(monitor_module_builddir)\" \
-			-I$(srcdir)/../common \
+noinst_LTLIBRARIES    = libclusterlistmodules.la \
+			libconfigmodules.la \
+			libmetricmodules.la \
+			libmonitormodules.la \
+			libmodules.la
+
+libclusterlistmodules_la_CFLAGS = -DCLUSTERLIST_MODULE_BUILDDIR=\"$(clusterlist_module_builddir)\" \
+				  -I$(srcdir)/../common \
+				  -I$(srcdir)/../debug \
+				  -I$(srcdir)/../include
+libclusterlistmodules_la_SOURCES = clusterlist_module.c \
+				   clusterlist_module_default.c
+libclusterlistmodules_la_LIBADD = $(CLUSTERLIST_STATIC_LIB)
+
+libconfigmodules_la_CFLAGS = -DCONFIG_MODULE_BUILDDIR=\"$(config_module_builddir)\" \
+			     -I$(srcdir)/../common \
+			     -I$(srcdir)/../debug \
+			     -I$(srcdir)/../include
+libconfigmodules_la_SOURCES = config_module.c \
+			      config_module_default.c
+libconfigmodules_la_LIBADD = $(CONFIG_STATIC_LIB)
+
+libmetricmodules_la_CFLAGS = -DMETRIC_MODULE_BUILDDIR=\"$(metric_module_builddir)\" \
+			     -I$(srcdir)/../common \
+			     -I$(srcdir)/../debug \
+			     -I$(srcdir)/../include
+libmetricmodules_la_SOURCES = metric_module.c
+libmetricmodules_la_LIBADD = $(METRIC_STATIC_LIB)
+
+libmonitormodules_la_CFLAGS = -DMONITOR_MODULE_BUILDDIR=\"$(monitor_module_builddir)\" \
+			      -I$(srcdir)/../common \
+			      -I$(srcdir)/../debug \
+			      -I$(srcdir)/../include
+libmonitormodules_la_SOURCES = monitor_module.c
+libmonitormodules_la_LIBADD = $(MONITOR_STATIC_LIB)
+
+libmodules_la_CFLAGS  = -I$(srcdir)/../common \
 			-I$(srcdir)/../debug \
 			-I$(srcdir)/../include
-libmodules_la_SOURCES = clusterlist_module.c \
-			clusterlist_module_default.c \
-			config_module.c \
-			config_module_default.c \
-			metric_module.c \
-			monitor_module.c \
-			module_util.c
-libmodules_la_LIBADD  = $(LTDL_LIBS) \
-			$(STATIC_MODULE_LIBS) \
-			../debug/libdebug.la
-
-../common/libltdl.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
-../debug/libdebug.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
+libmodules_la_SOURCES = module_util.c
 
 ../../modules/clusterlist/libstaticclusterlistmodules.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
